# rust-chardet

./: Cargo.toml  README.md
examples/: detect.rs
src/: big5freq.rs  big5prober.rs  chardistribution.rs  charsetprober.rs  codingstatemachine.rs  cp949prober.rs  enums.rs  escprober.rs  escsm.rs  eucjpprober.rs  euckrfreq.rs  euckrprober.rs  euctwfreq.rs  euctwprober.rs  gb2312freq.rs  gb2312prober.rs  hebrewprober.rs  jisfreq.rs  jpcntx.rs  langbulgarianmodel.rs  langcyrillicmodel.rs  langgreekmodel.rs  langhebrewmodel.rs  langthaimodel.rs  langturkishmodel.rs  latin1prober.rs  lib.rs  mbcharsetprober.rs  mbcssm.rs  sbcharsetprober.rs  sjisprober.rs  utf8prober.rs
tests/: run_test.rs
