[package]
name = "chardet"
version = "0.2.4"
authors = ["thuleqaid <thuleqaid@163.com>"]
readme = "README.md"
repository = "https://github.com/thuleqaid/rust-chardet"

description = "rust version of chardet"
license = "LGPL-3.0"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[profile.test]
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'

[profile.bench]
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[profile.doc]
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'

[dependencies]
